# uARMSolver

./: .directory  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  WINDOWS_INSTALLATION.md  makefile  uARMSolver.1
.github/workflows/: build.yml
datasets/: README.md  flights.csv
sources/: Archive.cpp  Archive.h  Attribute.cpp  Attribute.h  DESolver.cpp  DESolver.h  Evaluate.cpp  Evaluate.h  Feature.cpp  Feature.h  PSOSolver.cpp  PSOSolver.h  Particle.cpp  Particle.h  Problem.cpp  Problem.h  Rule.cpp  Rule.h  Setup.cpp  Setup.h  Squash.cpp  Squash.h  stat.cpp  stat.h  uARMSolver.cpp
